--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Dave Kol's Webpage</title>
+  </head>
 
-<head>
-    <title>Daveydboii's Webpage</title>
-</head>
-
-<body>
-    <iframe align="center" width="100%" height="100%" src="http://daveydboii.ueuo.com/db.php" name="myIframe"
-        id="myIframe"></iframe>
-</body>
-
+  <body>
+    <h1>Hello!</h1>
+  </body>
 </html>
