--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
 
   <body>
-    <a href="./test.html">Link to Page 2</a>
+    <a href="davekolian.github.io/test.html">Link to Page 2</a>
   </body>
 </html>
