--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Dave Kol's Webpage</title>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="/index.css">
+  <title>Dave Kol's Portfolio</title>
+</head>
+<body>
+  <div id="nav_bar">
 
-  <body>
-    <a href="test.html">Link to Page 2</a>
-  </body>
+  </div>
+</body>
 </html>
