Created the nav bar and added the background styling for the welcome page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,30 @@
   <title>Dave Kol's Portfolio</title>
 </head>
 <body>
-  <div id="nav_bar">
+  <div id="nav_bar_outer">
+    <div id="nav_bar_inner">
+      <img src="/logo_white.svg" alt="Dave Kol's logo"/>
+      <ul>
+        <li>Welcome</li>
+        <li>Code Works</li>
+        <li>Art Work</li>
+        <li>About Me</li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="welcome_page">
 
   </div>
+  <div id="code_works">
+
+  </div>
+  <div id="galleria">
+
+  </div>
+  <div id="about_me">
+
+  </div>
+
 </body>
 </html>
