Added temp layout for welcome, code_works and galleria

--- a/index.html
+++ b/index.html
@@ -1,38 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="/index.css">
-  <title>Dave Kol's Portfolio</title>
-</head>
-<body>
-  <div id="nav_bar_outer">
-    <div id="nav_bar_inner">
-      <img src="/logo_white.svg" alt="Dave Kol's logo"/>
-      <ul>
-        <li>Welcome</li>
-        <li>Code Works</li>
-        <li>Art Work</li>
-        <li>About Me</li>
-      </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/index.css" />
+    <title>Dave Kol's Portfolio</title>
+  </head>
+  <body>
+    <div id="nav_bar_outer">
+      <div id="nav_bar_inner">
+        <img src="/logo.svg" alt="Dave Kol's logo" />
+        <p>Dave Kol</p>
+        <ul>
+          <li>Welcome</li>
+          <li>Code Works</li>
+          <li>Art Work</li>
+          <li>About Me</li>
+        </ul>
+      </div>
     </div>
-  </div>
 
-  <div id="welcome_page">
+    <div id="welcome_page">
+      <h1>Welcome to my portfolio</h1>
+      <h3>I am a full-stack developer and graphic designer</h3>
+      <div id="circle"></div>
+      <p>
+        Hello! My name is Dave Kol, a recent graduate of BSc. in Computer
+        Science Engineering. I am currently in Debrecen, Hungary. I am a
+        creative and enthusiastic full stack developer and graphic designer. I
+        have a HUGE passion for Artificial Intelligence and Data Science.
+      </p>
+    </div>
 
-  </div>
-  <div id="code_works">
+    <div id="code_works">
+      <h1>Coding Projects</h1>
+      <p>Languages I use: Python, Java, JavaScript, C#, HTML, CSS.</p>
+      <div id="projects">
+        <div id="top">
+          <div id="box1">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+          <div id="box2">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+          <div id="box3">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+          <div id="box4">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+        </div>
+        <div id="bottom">
+          <div id="box5">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+          <div id="box6">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+          <div id="box7">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+          <div id="box8">
+            <h4>Title_of_Project</h4>
+            <p>
+              This project does this and that and that and this and also this
+              that and this so it can do this that and that.This project does
+              this and that and that and this and also this that and this so it
+              can do this that and that.
+            </p>
+          </div>
+        </div>
+      </div>
 
-  </div>
-  <div id="galleria">
+      <div id="button_more_code">
+        <p>See More?</p>
+      </div>
+    </div>
 
-  </div>
-  <div id="about_me">
+    <div id="galleria">
+      <h1>Graphic Porfolio</h1>
+      <div id="projects">
+        <div id="top">
+          <div id="box1">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box2">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box3">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box4">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box5">
+            <h4>Title_of_Project</h4>
+          </div>
+        </div>
+        <div id="bottom">
+          <div id="box6">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box7">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box8">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box9">
+            <h4>Title_of_Project</h4>
+          </div>
+          <div id="box10">
+            <h4>Title_of_Project</h4>
+          </div>
+        </div>
+      </div>
 
-  </div>
-
-</body>
+      <div id="button_more_code">
+        <p>See More?</p>
+      </div>
+    </div>
+    <div id="about_me"></div>
+  </body>
 </html>
