Added the about me page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="nav_bar_outer">
       <div id="nav_bar_inner">
-        <img src="/logo.svg" alt="Dave Kol's logo" />
+        <img src="assets/logo_favicons/logo.png" alt="Dave Kol's logo" />
         <p>Dave Kol</p>
         <ul>
           <li>Welcome</li>
@@ -26,12 +26,6 @@
       <h1>Welcome to my portfolio</h1>
       <h3>I am a full-stack developer and graphic designer</h3>
       <div id="circle"></div>
-      <p>
-        Hello! My name is Dave Kol, a recent graduate of BSc. in Computer
-        Science Engineering. I am currently in Debrecen, Hungary. I am a
-        creative and enthusiastic full stack developer and graphic designer. I
-        have a HUGE passion for Artificial Intelligence and Data Science.
-      </p>
     </div>
 
     <div id="code_works">
@@ -164,6 +158,34 @@
         <p>See More?</p>
       </div>
     </div>
-    <div id="about_me"></div>
+    <div id="contact_me">
+      <div id="about_me">
+        <h2>About Me</h2>
+        <p>
+          Hello! My name is Dave Kol, a recent graduate of BSc. in Computer
+          Science Engineering. I am currently in Debrecen, Hungary. I am a
+          creative and enthusiastic full stack developer and graphic designer. I
+          have a HUGE passion for Artificial Intelligence and Data Science.
+        </p>
+      </div>
+      <div id="links">
+        <h2>Links</h2>
+        <p>
+          If you would like to ask me some questions or just say hello, please
+          feel free to contact me via the following links.
+        </p>
+        <ul>
+          <li>
+            <img src="assets/icons/github.png" alt="Github Link" />
+          </li>
+          <li>
+            <img src="assets/icons/instagram.png" alt="Instgram Portfolio" />
+          </li>
+          <li>
+            <img src="assets/icons/linkedin.png" alt="Linkedin Page" />
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
