Added pictures and created galleria

--- a/index.html
+++ b/index.html
@@ -24,87 +24,65 @@
 
     <div id="welcome_page">
       <h1>Welcome to my portfolio</h1>
-      <h3>I am a full-stack developer and graphic designer</h3>
+      <h3>I am a software developer and graphic designer</h3>
       <div id="circle"></div>
     </div>
 
     <div id="code_works">
       <h1>Coding Projects</h1>
-      <p>Languages I use: Python, Java, JavaScript, C#, HTML, CSS.</p>
+      <p id="langs">
+        <b>Languages I use:</b> Python, Java, JavaScript, C#, HTML, CSS.
+      </p>
       <div id="projects">
         <div id="top">
           <div id="box1">
-            <h4>Title_of_Project</h4>
+            <h4>Manga RSS App</h4>
             <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
+              A web application that shows newly released manga from Scanalation
+              websites. Made possible with MERN stack + Heroku + Webscraper.
             </p>
           </div>
           <div id="box2">
-            <h4>Title_of_Project</h4>
+            <h4>Sudoku Solver</h4>
             <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
+              Java program that can solve Sudoku puzzles (of type 2x2, 2x3, 3x3
+              and 3x3 diagonal) with the help of the Backtracking algorithm and
+              the Constraint Satisfaction Problem.
             </p>
           </div>
           <div id="box3">
-            <h4>Title_of_Project</h4>
+            <h4>Desktop Chat App</h4>
             <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
+              Desktop app which enables communication between clients on the
+              localhost.
             </p>
           </div>
           <div id="box4">
-            <h4>Title_of_Project</h4>
+            <h4>Voithos</h4>
             <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
+              Mobile application that allows the users to book an appointment
+              with their local doctors and to book for a specialized doctor
+              based on their symptoms.
             </p>
           </div>
         </div>
         <div id="bottom">
           <div id="box5">
-            <h4>Title_of_Project</h4>
+            <h4>Smart Home</h4>
             <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
+              Desktop app which mimics the regulation of temperature in a Smart
+              Home.
             </p>
           </div>
           <div id="box6">
-            <h4>Title_of_Project</h4>
-            <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
-            </p>
+            <h4>Computer Vision</h4>
+            <p>Learning how to use OpenCV to learn Computer Vision</p>
           </div>
           <div id="box7">
-            <h4>Title_of_Project</h4>
+            <h4>Pathfinding</h4>
             <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
-            </p>
-          </div>
-          <div id="box8">
-            <h4>Title_of_Project</h4>
-            <p>
-              This project does this and that and that and this and also this
-              that and this so it can do this that and that.This project does
-              this and that and that and this and also this that and this so it
-              can do this that and that.
+              An application where you can find the shortest path from Point A
+              to Point B in between obstacles.
             </p>
           </div>
         </div>
@@ -118,39 +96,54 @@
     <div id="galleria">
       <h1>Graphic Porfolio</h1>
       <div id="projects">
-        <div id="top">
-          <div id="box1">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box2">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box3">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box4">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box5">
-            <h4>Title_of_Project</h4>
-          </div>
+        <div id="box2">
+          <img src="assets/galleria/two_faced_man.png" alt="Two Faced Man" />
         </div>
-        <div id="bottom">
-          <div id="box6">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box7">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box8">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box9">
-            <h4>Title_of_Project</h4>
-          </div>
-          <div id="box10">
-            <h4>Title_of_Project</h4>
-          </div>
+        <div id="box3">
+          <img src="assets/galleria/macbook.jpg" a lt="Macbook" />
+        </div>
+        <div id="box4">
+          <img src="assets/galleria/sailor.jpg" alt="Sailor" />
+        </div>
+        <div id="box5">
+          <img src="assets/galleria/santa_pikachu.jpg" alt="Santa Pikachu" />
+        </div>
+        <div id="box7">
+          <img
+            src="assets/galleria/chess_pieces.jpg"
+            alt="Low Poly Chess Pieces"
+          />
+        </div>
+        <div id="box8">
+          <img src="assets/galleria/chandelier.png" alt="Chandelier" />
+        </div>
+        <div id="box9">
+          <img src="assets/galleria/mini_dave.jpg" alt="Min Dave" />
+        </div>
+        <div id="box10">
+          <img src="assets/galleria/crystals.jpg" alt="Crystals" />
+        </div>
+
+        <div id="box11">
+          <img src="assets/galleria/pendant.jpg" alt="Pendant" />
+        </div>
+        <div id="box12">
+          <img src="assets/galleria/fluid_study.jpg" alt="Fluid Study" />
+        </div>
+        <div id="box13">
+          <img src="assets/galleria/embers.jpg" alt="Embers" />
+        </div>
+        <div id="box14">
+          <img src="assets/galleria/matchsticks.jpg" alt="Matchsticks" />
+        </div>
+        <div id="box15">
+          <img src="assets/galleria/hdr.jpg" alt="HDR" />
+        </div>
+        <div id="box6">
+          <img src="assets/galleria/chess_cube.jpg" alt="Chess Cube" />
+        </div>
+        <div id="box1">
+          <img src="assets/galleria/trident.png" alt="trident" />
         </div>
       </div>
 
