Added h2 overlays on hover for each picture

--- a/index.html
+++ b/index.html
@@ -96,53 +96,68 @@
     <div id="galleria">
       <h1>Graphic Porfolio</h1>
       <div id="projects">
-        <div id="box2">
+        <div id="box">
+          <h2>Two Faced Man</h2>
           <img src="assets/galleria/two_faced_man.png" alt="Two Faced Man" />
         </div>
-        <div id="box3">
+        <div id="box">
+          <h2>Macbook</h2>
           <img src="assets/galleria/macbook.jpg" a lt="Macbook" />
         </div>
-        <div id="box4">
+        <div id="box">
+          <h2>Sailor</h2>
           <img src="assets/galleria/sailor.jpg" alt="Sailor" />
         </div>
-        <div id="box5">
+        <div id="box">
+          <h2>Santa Pikachu</h2>
           <img src="assets/galleria/santa_pikachu.jpg" alt="Santa Pikachu" />
         </div>
-        <div id="box7">
+        <div id="box">
+          <h2>Chess Pieces</h2>
           <img
             src="assets/galleria/chess_pieces.jpg"
             alt="Low Poly Chess Pieces"
           />
         </div>
-        <div id="box8">
+        <div id="box">
+          <h2>Chandelier</h2>
           <img src="assets/galleria/chandelier.png" alt="Chandelier" />
         </div>
-        <div id="box9">
-          <img src="assets/galleria/mini_dave.jpg" alt="Min Dave" />
+        <div id="box">
+          <h2>Mini Dave</h2>
+          <img src="assets/galleria/mini_dave.jpg" alt="Mini Dave" />
         </div>
-        <div id="box10">
+        <div id="box">
+          <h2>Crystals</h2>
           <img src="assets/galleria/crystals.jpg" alt="Crystals" />
         </div>
 
-        <div id="box11">
+        <div id="box">
+          <h2>Pendant</h2>
           <img src="assets/galleria/pendant.jpg" alt="Pendant" />
         </div>
-        <div id="box12">
+        <div id="box">
+          <h2>Fluid Study</h2>
           <img src="assets/galleria/fluid_study.jpg" alt="Fluid Study" />
         </div>
-        <div id="box13">
+        <div id="box">
+          <h2>Embers</h2>
           <img src="assets/galleria/embers.jpg" alt="Embers" />
         </div>
-        <div id="box14">
+        <div id="box">
+          <h2>Matchsticks</h2>
           <img src="assets/galleria/matchsticks.jpg" alt="Matchsticks" />
         </div>
-        <div id="box15">
-          <img src="assets/galleria/hdr.jpg" alt="HDR" />
+        <div id="box">
+          <h2>Space HDR</h2>
+          <img src="assets/galleria/hdr.jpg" alt="Space HDR" />
         </div>
-        <div id="box6">
+        <div id="box">
+          <h2>Chess Cube</h2>
           <img src="assets/galleria/chess_cube.jpg" alt="Chess Cube" />
         </div>
-        <div id="box1">
+        <div id="box" class="box1">
+          <h2>Trident</h2>
           <img src="assets/galleria/trident.png" alt="trident" />
         </div>
       </div>
