--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     </div>
 
     <div id="welcome_page">
-      <h1>Welcome to my portfolio</h1>
-      <h3>I am a software developer and graphic designer</h3>
-      <div id="circle"></div>
+      <div id="content">
+        <div id="circle"></div>
+        <div id="right">
+          <h1 id="name_popup">Dave Kol's</h1>
+          <h1>Welcome to my portfolio</h1>
+
+          <h3>I am a software developer and graphic designer</h3>
+        </div>
+      </div>
     </div>
 
     <div id="code_works">
@@ -94,7 +100,7 @@
     </div>
 
     <div id="galleria">
-      <h1>Graphic Porfolio</h1>
+      <h1>Graphic Portfolio</h1>
       <div id="projects">
         <div id="box">
           <h2>Two Faced Man</h2>
