Added some styling to the nav bar on hover

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <img src="assets/logo_favicons/logo.png" alt="Dave Kol's logo" />
         <p>Dave Kol</p>
         <ul>
-          <li>Welcome</li>
-          <li>Code Works</li>
-          <li>Art Work</li>
-          <li>About Me</li>
+          <li><a href="#code_works">Code Works</a></li>
+          <li><a href="#galleria">Art Work</a></li>
+          <li><a href="#contact_me">About Me</a></li>
         </ul>
       </div>
     </div>
@@ -186,13 +185,19 @@
         </p>
         <ul>
           <li>
-            <img src="assets/icons/github.png" alt="Github Link" />
+            <a href="https://github.com/davekolian" target="_blank">
+              <img src="assets/icons/github.png" alt="Github Link"/>
+            </a>
           </li>
           <li>
-            <img src="assets/icons/instagram.png" alt="Instgram Portfolio" />
+            <a href="instagram.com/thekolboy" target="_blank">
+              <img src="assets/icons/instagram.png" alt="Instgram Portfolio"/>
+            </a>
           </li>
           <li>
-            <img src="assets/icons/linkedin.png" alt="Linkedin Page" />
+            <a href="https://www.linkedin.com/in/davekol/" target="_blank"></a>
+              <img src="assets/icons/linkedin.png" alt="Linkedin Page" />
+           </a>
           </li>
         </ul>
       </div>
