Added links to github code projects + hover effects

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="assets/logo_favicons/logo_white.ico" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="/index.css" />
     <title>Dave Kol's Portfolio</title>
   </head>
   <body>
-    <div id="nav_bar_outer">
+    <div id="nav_bar_outer">  
       <div id="nav_bar_inner">
         <img src="assets/logo_favicons/logo.png" alt="Dave Kol's logo" />
         <p>Dave Kol</p>
@@ -40,61 +40,71 @@
       </p>
       <div id="projects">
         <div id="top">
-          <div id="box1">
+          <div id="box">
             <h4>Manga RSS App</h4>
             <p>
               A web application that shows newly released manga from Scanalation
               websites. Made possible with MERN stack + Heroku + Webscraper.
             </p>
+            <a href="https://github.com/davekolian/Manga-RSS-App" target="_blank">
+            <span id="link_maker"></span>
           </div>
-          <div id="box2">
+          <div id="box">
             <h4>Sudoku Solver</h4>
             <p>
               Java program that can solve Sudoku puzzles (of type 2x2, 2x3, 3x3
               and 3x3 diagonal) with the help of the Backtracking algorithm and
               the Constraint Satisfaction Problem.
             </p>
+            <a href="https://github.com/davekolian/Sudoku-Solver" target="_blank">
+            <span id="link_maker"></span>
           </div>
-          <div id="box3">
+          <div id="box">
             <h4>Desktop Chat App</h4>
             <p>
               Desktop app which enables communication between clients on the
               localhost.
             </p>
+            <a href="https://github.com/davekolian/Server-Client-Program" target="_blank">
+            <span id="link_maker"></span>
           </div>
-          <div id="box4">
+          <div id="box">
             <h4>Voithos</h4>
             <p>
               Mobile application that allows the users to book an appointment
               with their local doctors and to book for a specialized doctor
               based on their symptoms.
             </p>
+            <a href="https://github.com/davekolian/voithos" target="_blank">
+            <span id="link_maker"></span>
           </div>
         </div>
         <div id="bottom">
-          <div id="box5">
-            <h4>Smart Home</h4>
+          <div id="box">
+            <h4>Smart Home Model</h4>
             <p>
               Desktop app which mimics the regulation of temperature in a Smart
               Home.
             </p>
+            <a href="https://github.com/davekolian/temperature-sensor-network" target="_blank">
+            <span id="link_maker"></span>
           </div>
-          <div id="box6">
+          <div id="box">
             <h4>Computer Vision</h4>
             <p>Learning how to use OpenCV to learn Computer Vision</p>
+            <a href="https://github.com/davekolian/opencv-computer-vision" target="_blank">
+            <span id="link_maker"></span>
           </div>
-          <div id="box7">
+          <div id="box">
             <h4>Pathfinding</h4>
             <p>
               An application where you can find the shortest path from Point A
               to Point B in between obstacles.
             </p>
+            
+            <span id="link_maker"><a href="https://github.com/davekolian/pathfinding" target="_blank"></a></span>
           </div>
         </div>
-      </div>
-
-      <div id="button_more_code">
-        <p>See More?</p>
       </div>
     </div>
 
@@ -173,8 +183,8 @@
         <p>
           Hello! My name is Dave Kol, a recent graduate of BSc. in Computer
           Science Engineering. I am currently in Debrecen, Hungary. I am a
-          creative and enthusiastic full stack developer and graphic designer. I
-          have a HUGE passion for Artificial Intelligence and Data Science.
+          creative and enthusiastic <b>software developer</b> and <b>graphic designer</b>. I
+          have a <b>HUGE</b> passion for Artificial Intelligence and Data Science.
         </p>
       </div>
       <div id="links">
