Added some CSS transitions + fixed the projects links using JS

--- a/index.html
+++ b/index.html
@@ -4,54 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/logo_favicons/logo_white.ico" type="image/x-icon"/>
+    <link
+      rel="shortcut icon"
+      href="assets/logo_favicons/logo_white.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" type="text/css" href="/index.css" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    ></script>
     <script type="text/javascript" src="/index.js"></script>
     <title>Dave Kol's Portfolio</title>
   </head>
   <body>
-    <nav class="nav_on_top">  
+    <nav class="nav_on_top">
       <div id="nav_bar_inner">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="62.719px" height="98.915px" viewBox="0 0 62.719 98.915" enable-background="new 0 0 62.719 98.915" xml:space="preserve">
+        <svg
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          width="62.719px"
+          height="98.915px"
+          viewBox="0 0 62.719 98.915"
+          enable-background="new 0 0 62.719 98.915"
+          xml:space="preserve"
+        >
           <g>
             <g>
-              <path d="M58.638,1.447c0.675,11.955,1.895,24.394-0.758,36.192c-1.088,4.838-3.223,9.688-7.565,12.398
+              <path
+                d="M58.638,1.447c0.675,11.955,1.895,24.394-0.758,36.192c-1.088,4.838-3.223,9.688-7.565,12.398
                 c-5.746,3.585-13.508,1.158-19.262-1.032c-1.812-0.69-2.587,2.212-0.798,2.893c11.987,4.563,24.045,3.917,29.244-9.229
-                c4.992-12.624,2.884-28.04,2.14-41.222C61.529-0.477,58.528-0.487,58.638,1.447L58.638,1.447z"/>
+                c4.992-12.624,2.884-28.04,2.14-41.222C61.529-0.477,58.528-0.487,58.638,1.447L58.638,1.447z"
+              />
             </g>
           </g>
           <g>
             <g>
-              <path d="M33.267,32.219c0.926-12.211,19.642-15.632,28.01-21.396c1.582-1.09,0.084-3.691-1.514-2.591
-                c-9.713,6.691-28.412,9.688-29.496,23.987C30.12,34.15,33.121,34.136,33.267,32.219L33.267,32.219z"/>
+              <path
+                d="M33.267,32.219c0.926-12.211,19.642-15.632,28.01-21.396c1.582-1.09,0.084-3.691-1.514-2.591
+                c-9.713,6.691-28.412,9.688-29.496,23.987C30.12,34.15,33.121,34.136,33.267,32.219L33.267,32.219z"
+              />
             </g>
           </g>
           <g>
             <g>
-              <path d="M3.783,81.224C3.2,70.976,2.439,60.684,3.626,50.451c0.223-1.92-2.78-1.898-3,0C-0.561,60.684,0.2,70.976,0.783,81.224
-                C0.893,83.147,3.894,83.158,3.783,81.224L3.783,81.224z"/>
+              <path
+                d="M3.783,81.224C3.2,70.976,2.439,60.684,3.626,50.451c0.223-1.92-2.78-1.898-3,0C-0.561,60.684,0.2,70.976,0.783,81.224
+                C0.893,83.147,3.894,83.158,3.783,81.224L3.783,81.224z"
+              />
             </g>
           </g>
           <g>
             <g>
-              <path d="M29.153,50.451C28.228,62.663,9.512,66.083,1.144,71.848c-1.582,1.089-0.084,3.69,1.514,2.59
-                c9.713-6.69,28.412-9.688,29.496-23.987C32.3,48.52,29.299,48.534,29.153,50.451L29.153,50.451z"/>
+              <path
+                d="M29.153,50.451C28.228,62.663,9.512,66.083,1.144,71.848c-1.582,1.089-0.084,3.69,1.514,2.59
+                c9.713-6.69,28.412-9.688,29.496-23.987C32.3,48.52,29.299,48.534,29.153,50.451L29.153,50.451z"
+              />
             </g>
           </g>
           <g>
             <g>
-              <path d="M2.908,74.474c11.582,3.732,37.18,7.012,37.608,22.991c0.052,1.931,3.052,1.936,3,0
-                c-0.484-18.117-26.671-21.65-39.81-25.884C1.859,70.987,1.074,73.883,2.908,74.474L2.908,74.474z"/>
+              <path
+                d="M2.908,74.474c11.582,3.732,37.18,7.012,37.608,22.991c0.052,1.931,3.052,1.936,3,0
+                c-0.484-18.117-26.671-21.65-39.81-25.884C1.859,70.987,1.074,73.883,2.908,74.474L2.908,74.474z"
+              />
             </g>
           </g>
         </svg>
         <p>Dave Kol</p>
         <ul>
-          <li><a class="single" href="#code_works" onclick="clickSingleA(this)">Code Works</a></li>
-          <li><a class="single" href="#galleria" onclick="clickSingleA(this)">Art Work</a></li>
-          <li><a class="single" href="#contact_me" onclick="clickSingleA(this)">About Me</a></li>
+          <li>
+            <a class="single" href="#code_works" onclick="clickSingleA(this)"
+              >Code Works</a
+            >
+          </li>
+          <li>
+            <a class="single" href="#galleria" onclick="clickSingleA(this)"
+              >Art Work</a
+            >
+          </li>
+          <li>
+            <a class="single" href="#contact_me" onclick="clickSingleA(this)"
+              >About Me</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
@@ -75,69 +115,83 @@
       </p>
       <div id="projects">
         <div id="top">
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/Manga-RSS-App')"
+            style="cursor: pointer"
+          >
             <h4>Manga RSS App</h4>
             <p>
               A web application that shows newly released manga from Scanalation
               websites. Made possible with MERN stack + Heroku + Webscraper.
             </p>
-            <a href="https://github.com/davekolian/Manga-RSS-App" target="_blank">
-            <span id="link_maker"></span>
           </div>
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/Sudoku-Solver')"
+            style="cursor: pointer"
+          >
             <h4>Sudoku Solver</h4>
             <p>
               Java program that can solve Sudoku puzzles (of type 2x2, 2x3, 3x3
               and 3x3 diagonal) with the help of the Backtracking algorithm and
               the Constraint Satisfaction Problem.
             </p>
-            <a href="https://github.com/davekolian/Sudoku-Solver" target="_blank">
-            <span id="link_maker"></span>
           </div>
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/Server-Client-Program')"
+            style="cursor: pointer"
+          >
             <h4>Desktop Chat App</h4>
             <p>
               Desktop app which enables communication between clients on the
               localhost.
             </p>
-            <a href="https://github.com/davekolian/Server-Client-Program" target="_blank">
-            <span id="link_maker"></span>
           </div>
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/voithos')"
+            style="cursor: pointer"
+          >
             <h4>Voithos</h4>
             <p>
               Mobile application that allows the users to book an appointment
               with their local doctors and to book for a specialized doctor
               based on their symptoms.
             </p>
-            <a href="https://github.com/davekolian/voithos" target="_blank">
-            <span id="link_maker"></span>
           </div>
         </div>
         <div id="bottom">
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/temperature-sensor-network')"
+            style="cursor: pointer"
+          >
             <h4>Smart Home Model</h4>
             <p>
               Desktop app which mimics the regulation of temperature in a Smart
               Home.
             </p>
-            <a href="https://github.com/davekolian/temperature-sensor-network" target="_blank">
-            <span id="link_maker"></span>
           </div>
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/opencv-computer-vision')"
+            style="cursor: pointer"
+          >
             <h4>Computer Vision</h4>
             <p>Learning how to use OpenCV to learn Computer Vision</p>
-            <a href="https://github.com/davekolian/opencv-computer-vision" target="_blank">
-            <span id="link_maker"></span>
           </div>
-          <div id="box">
+          <div
+            id="box"
+            onclick="openProject('https://github.com/davekolian/pathfinding')"
+            style="cursor: pointer"
+          >
             <h4>Pathfinding</h4>
             <p>
               An application where you can find the shortest path from Point A
               to Point B in between obstacles.
             </p>
-            
-            <span id="link_maker"><a href="https://github.com/davekolian/pathfinding" target="_blank"></a></span>
           </div>
         </div>
       </div>
@@ -218,8 +272,9 @@
         <p>
           Hello! My name is Dave Kol, a recent graduate of BSc. in Computer
           Science Engineering. I am currently in Debrecen, Hungary. I am a
-          creative and enthusiastic <b>software developer</b> and <b>graphic designer</b>. I
-          have a <b>HUGE</b> passion for Artificial Intelligence and Data Science.
+          creative and enthusiastic <b>software developer</b> and
+          <b>graphic designer</b>. I have a <b>HUGE</b> passion for Artificial
+          Intelligence and Data Science.
         </p>
       </div>
       <div id="links">
@@ -231,18 +286,18 @@
         <ul>
           <li>
             <a href="https://github.com/davekolian" target="_blank">
-              <img src="assets/icons/github.png" alt="Github Link"/>
+              <img src="assets/icons/github.png" alt="Github Link" />
             </a>
           </li>
           <li>
-            <a href="instagram.com/thekolboy" target="_blank">
-              <img src="assets/icons/instagram.png" alt="Instgram Portfolio"/>
+            <a href="https://instagram.com/thekolboy" target="_blank">
+              <img src="assets/icons/instagram.png" alt="Instgram Portfolio" />
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/davekol/" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/davekol/" target="_blank">
               <img src="assets/icons/linkedin.png" alt="Linkedin Page" />
-           </a>
+            </a>
           </li>
         </ul>
       </div>
