Added scroll wheel to recognize which part of the page

--- a/index.html
+++ b/index.html
@@ -78,17 +78,26 @@
         <p>Dave Kol</p>
         <ul>
           <li>
-            <a class="single" href="#code_works" onclick="clickSingleA(this)"
+            <a
+              class="single code_works"
+              href="#code_works"
+              onclick="clickSingleA(this)"
               >Code Works</a
             >
           </li>
           <li>
-            <a class="single" href="#galleria" onclick="clickSingleA(this)"
+            <a
+              class="single galleria"
+              href="#galleria"
+              onclick="clickSingleA(this)"
               >Art Work</a
             >
           </li>
           <li>
-            <a class="single" href="#contact_me" onclick="clickSingleA(this)"
+            <a
+              class="single contact_me"
+              href="#contact_me"
+              onclick="clickSingleA(this)"
               >About Me</a
             >
           </li>
