--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <div id="welcome_page">
       <div id="content">
         <div id="circle"></div>
+        <div id="blank"></div>
         <div id="right">
           <h1 id="name_popup">Dave Kol's</h1>
           <h1>Welcome to my portfolio</h1>
